# molcrafts-zensical-theme

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: zensical.toml
examples/basic/: zensical.toml
examples/basic/docs/: components.md  index.md  molplot.md
examples/cpp/include/demo/: api.hpp
examples/docs/: components.md  cpp.md  molplot.md  molvis.md
examples/minimal/: zensical.toml
examples/minimal/docs/: index.md
scripts/: ci-local.sh
src/mkdocstrings_handlers/cpp/: __init__.py
src/mkdocstrings_handlers/cpp/_internal/: __init__.py  config.py  doxygen.py  handler.py  parser.py  rendering.py
src/mkdocstrings_handlers/cpp/templates/material/: object.html.jinja  style.css
src/molcrafts_zensical_theme/: __init__.py  formatters.py  main.html  mkdocs_theme.yml
src/molcrafts_zensical_theme/assets/javascripts/: mathjax.js
src/molcrafts_zensical_theme/assets/stylesheets/: molcrafts.css
src/molcrafts_zensical_theme/partials/: copyright.html
tests/: test_cpp_handler.py  test_formatters.py
