[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molcrafts-zensical-theme"
version = "0.1.0"
description = "MolCrafts theme extension for Zensical documentation sites."
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
authors = [
  { name = "MolCrafts" }
]
keywords = ["molcrafts", "zensical", "documentation", "theme"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "zensical>=0.0.45",
]

[project.urls]
Homepage = "https://github.com/MolCrafts/molcrafts-zensical-theme"
Repository = "https://github.com/MolCrafts/molcrafts-zensical-theme"
Issues = "https://github.com/MolCrafts/molcrafts-zensical-theme/issues"

[project.entry-points."mkdocs.themes"]
molcrafts = "molcrafts_zensical_theme"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["molcrafts_zensical_theme*"]

[tool.setuptools.package-data]
molcrafts_zensical_theme = [
  "mkdocs_theme.yml",
  "main.html",
  "assets/images/*.svg",
  "assets/stylesheets/*.css",
]
